[package]
name = "fq-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
fq-tools = { workspace = true }
async-nats = { workspace = true }
url = "2"
# Trimmed from "full" (#194 phase 2): this is a library crate, so its
# feature set leaks to every consumer. The list is the observed need of
# the daemon loops (spawn/select/timers/channels), the SQLite projection
# and config IO, and the MCP child-process transport; the dev-dependency
# below re-adds "full" for test builds. Binaries (fq-cli, fq-dashboard)
# take "full" themselves.
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
bytes = "1"
getrandom = "0.3"
toml = { workspace = true }
walkdir = "2"
async-trait = { workspace = true }
genai = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.7", default-features = false, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
strum = { workspace = true }
# The read-only operator service (#105 layer 2). Optional so library
# consumers don't pull tarpc — same shape as fq-store's `service` feature.
tarpc = { workspace = true, optional = true }

[features]
# The in-daemon read-only tarpc service (wire-mirror of `views` plus the
# JetStream health probe). `fq-cli` enables it; whether the *listener*
# starts is a runtime decision (`[read_service]` in fq.toml).
read-service = ["dep:tarpc"]

[dev-dependencies]
# The shared private-broker guard, re-exported as `test_support::nats` for
# this crate's `#[cfg(test)]` code and used directly by tests/*.rs (#233).
fq-test-support = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }
# Test builds get the whole runtime back — the trim above is about what
# consumers inherit, not about starving the test suite.
tokio = { workspace = true, features = ["full"] }
# Integration tests construct rmcp wire types (e.g. a canned
# `CreateMessageResult` to reply to a bridged sampling request); the
# `server` + `transport-async-rw` features let unit tests serve an
# in-process mock MCP server over a duplex (D1: pagination / mutation).
rmcp = { version = "1.7", default-features = false, features = ["client", "server", "transport-child-process", "transport-async-rw"] }

[lints]
workspace = true

[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }
