[package]
name = "fq-tools"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
glob = "0.3"
regex = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
