[package]
name = "fq-tools"
version.workspace = true
edition.workspace = true

[dependencies]
# Trimmed from "full" (#194 phase 2): a library crate's feature set
# leaks to every consumer. The list is the observed need of the tool
# battery (child processes, file IO, spawn/select, timeouts); the
# dev-dependency below re-adds "full" for test builds.
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
glob = "0.3"
regex = "1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
